--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=dev
+spring.datasource.password=password
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jps.properties.hibernate.format_sql=true
+
+server.error.include-message=always
