--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ jwt_secret=JWT_SECRET_HERE
 
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
+
+BASE_URL=http://localhost:8080/
+STRIPE_SECRET_KEY=<STRIPE SECRET KEY>
