--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ springdoc.api-docs.path=/api-docs
 
 BASE_URL=http://localhost:8080/
 STRIPE_SECRET_KEY=<STRIPE SECRET KEY>
+
+logging.level.web=DEBUG
